force-app/main/default/objects/Google__mdt/Google__mdt.object-meta.xml
<CustomObject>
    <description>Just the client id, secret, auth URL , token url i.e. common details will be stored here</description>
    <label>Google</label>
    <pluralLabel>Google</pluralLabel>
</CustomObject>