force-app/main/default/objects/Google__mdt/fields/Auth_URL__c.field-meta.xml
<CustomField>
    <fullName>Auth_URL__c</fullName>
    <defaultValue>&quot;https://accounts.google.com/o/oauth2/v2/auth&quot;</defaultValue>
    <label>Auth URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>