force-app/main/default/objects/Google__mdt/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <defaultValue>&quot;openid https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile https://mail.google.com/ https://www.googleapis.com/auth/gmail.modify https://www.googleapis.com/auth/gmail.compose https://www.googleapis.com/auth/gmail.send&quot;</defaultValue>
    <inlineHelpText>Combined scopes multiple APIs like GMAIL API, Calendar API etc</inlineHelpText>
    <label>Scopes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>