force-app/main/default/objects/Google__mdt/fields/Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_URL__c</fullName>
    <defaultValue>&quot;https://oauth2.googleapis.com/token&quot;</defaultValue>
    <label>Token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>